Start to make dark mode + fixing issues

--- a/src/components/DailyWeatherInfo/DailyWeatherInfo.module.css
+++ b/src/components/DailyWeatherInfo/DailyWeatherInfo.module.css
@@ -7,7 +7,8 @@
     justify-content: space-around;
     flex-shrink: 0;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    ;
+    border-radius: 8px;
+    background-color: var(--card-color);
 }
 
 .day {
