--- a/src/components/FavoriteCityDetails/FavoriteCityDetails.module.css
+++ b/src/components/FavoriteCityDetails/FavoriteCityDetails.module.css
@@ -8,6 +8,8 @@
     flex-shrink: 0;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     position: relative;
+    border-radius: 8px;
+    background-color: var(--card-color);
 }
 
 .cityName {
