--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+:root {
+    --card-color: white;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
+}
+
+[data-theme="dark"] {
+    color: white;
+    background-color: black;
+    --card-color: #1e1e1e;
 }
